--- a/src/WorldElement.css
+++ b/src/WorldElement.css
@@ -1,7 +1,10 @@
 .world-element-wrapper {
-  position: relative;
+  position: absolute;
+  top: 0;
+  height: 100%;
 }
 
 .world-element-wrapper .tile {
   position: absolute;
+  bottom: 0;
 }
