--- a/src/Gem.css
+++ b/src/Gem.css
@@ -13,12 +13,12 @@
 
 @keyframes take-gem {
   from {
-    transform: scale(1);
+    transform: scale(1) rotate(0deg);
     opacity: 1;
   }
 
   to {
-    transform: scale(2);
+    transform: scale(0.6) rotate(-360deg);
     opacity: 0;
   }
 }
